[gd_scene load_steps=5 format=3 uid="uid://dk1rgtf8maf0i"]

[ext_resource type="Script" path="res://GDScripts/Menus/options.gd" id="1_8iwmn"]
[ext_resource type="Shader" path="res://Art/Shaders/PauseMenu.gdshader" id="2_2g48d"]
[ext_resource type="PackedScene" uid="uid://b4mfu0ifno2bj" path="res://Scenes/Menus/settings_tab_container.tscn" id="3_wrwmt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ay1a2"]
shader = ExtResource("2_2g48d")
shader_parameter/lod = 0.8

[node name="Options" type="Control" node_paths=PackedStringArray("resolutions", "window_modes", "v_sync", "master_slider", "sfx_slider", "music_slider", "dialogue_slider")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8iwmn")
resolutions = NodePath("SettingsTabContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Resolutions")
window_modes = NodePath("SettingsTabContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/WindowModes")
v_sync = NodePath("SettingsTabContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/V-SYNC")
master_slider = NodePath("SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/MasterSlider")
sfx_slider = NodePath("SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/SFXSlider")
music_slider = NodePath("SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/MusicSlider")
dialogue_slider = NodePath("SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/DialogueSlider")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ay1a2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsTabContainer" parent="." instance=ExtResource("3_wrwmt")]
layout_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.5
offset_right = 75.5
offset_bottom = 54.0
grow_horizontal = 2
bbcode_enabled = true
text = "[b][color=GREEN][wave amp = 0.01 frequency=0.2][font_size=30] OPTIONS"

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -104.0
offset_right = 104.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "BACK"

[node name="MenuButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "MENU
"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="value_changed" from="SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="drag_ended" from="SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabContainer/TabContainer/Sound/MarginContainer/VBoxContainer/DialogueSlider" to="." method="_on_dialogue_slider_value_changed"]
[connection signal="item_selected" from="SettingsTabContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="item_selected" from="SettingsTabContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/WindowModes" to="." method="_on_window_modes_item_selected"]
[connection signal="toggled" from="SettingsTabContainer/TabContainer/Graphics/MarginContainer/VBoxContainer/V-SYNC" to="." method="_on_vsync_toggled"]
[connection signal="pressed" from="ButtonsContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]

[editable path="SettingsTabContainer"]
